--- a/requirements.txt
+++ b/requirements.txt
@@ -62,3 +62,15 @@ psycopg2-binary==2.9.9
 # Optional: Monitoring
 prometheus-client==0.19.0
 grafana-api==1.0.3
+
+# Security and Encryption
+cryptography==41.0.8
+bcrypt==4.1.2
+python-jose[cryptography]==3.3.0
+passlib[bcrypt]==1.7.4
+
+# AI/ML and OpenAI Integration
+openai==1.3.7
+tiktoken==0.5.2
+anthropic==0.7.7
+google-generativeai==0.3.2
