--- a/config/educational_betting_config.yaml
+++ b/config/educational_betting_config.yaml
@@ -22,6 +22,12 @@ api:
     enabled: false
     bot_token: "${TELEGRAM_BOT_TOKEN}"  # Set via environment variable
     chat_id: "${TELEGRAM_CHAT_ID}"  # Set via environment variable
+  
+  weather_api:
+    enabled: true
+    api_key: "${WEATHER_API_KEY}"  # Set via environment variable
+    base_url: "http://api.weatherapi.com/v1"
+    timeout: 10
 
 # Safety Configuration
 safety:
