🔧 Fix Vercel deployment - exclude git-secret files
- Added .vercelignore to exclude sensitive files
- Updated .gitignore for better security
- Removed git-secret files from Git index
- Ready for clean Vercel deployment

--- a/.gitignore
+++ b/.gitignore
@@ -32,7 +32,10 @@ models/*.pkl
 .env.local
 .DS_Store
 Thumbs.db
-.gitsecret/keys/random_seed
+# Git secrets - exclude all
+.gitsecret/
+.secret_key
+*.secret
 !*.secret
 telegram_secrets.env
 
@@ -41,3 +44,4 @@ config/notion_databases.json
 config/notion_token.txt
 *.notion_token
 NOTION_TOKEN
+.vercel
