--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
   "version": 2,
   "public": true,
   "functions": {
-    "web/pages/api/**/*.js": {
+    "api/**/*.js": {
       "maxDuration": 30
     }
   },
