🔧 Fix Vercel output directory configuration
- Set outputDirectory to current directory
- Added buildCommand for static site
- Ready for successful deployment

--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,7 @@
 {
   "version": 2,
-  "public": true,
+  "buildCommand": "echo 'Static site - no build needed'",
+  "outputDirectory": ".",
   "functions": {
     "api/**/*.js": {
       "maxDuration": 30
