--- a/requirements.txt
+++ b/requirements.txt
@@ -75,3 +75,8 @@ openai==1.3.7
 tiktoken==0.5.2
 anthropic==0.7.7
 google-generativeai==0.3.2
+
+# Reddit Integration
+praw==7.7.1  # Reddit API wrapper
+vaderSentiment==3.3.2  # Sentiment analysis
+textblob==0.17.1  # NLP for tip extraction
