--- a/requirements.txt
+++ b/requirements.txt
@@ -80,3 +80,12 @@ google-generativeai==0.3.2
 praw==7.7.1  # Reddit API wrapper
 vaderSentiment==3.3.2  # Sentiment analysis
 textblob==0.17.1  # NLP for tip extraction
+
+# Telegram Insider Integration
+telethon==1.34.0  # Telegram client library for channel scraping
+
+# Discord Intelligence Integration
+discord.py==2.3.2  # Discord API wrapper
+
+# Twitter Intelligence Integration
+tweepy==4.14.0  # Twitter API wrapper
