--- a/vercel.json
+++ b/vercel.json
@@ -4,9 +4,15 @@
   "outputDirectory": ".",
   "functions": {
     "api/**/*.js": {
-      "maxDuration": 30
+      "maxDuration": 300
     }
   },
+  "crons": [
+    {
+      "path": "/api/itf-scraper-cron",
+      "schedule": "0 6,18 * * *"
+    }
+  ],
   "headers": [
     {
       "source": "/(.*)",
