feat: Add Notion integration and update ITF pipeline
- Add Notion API token to telegram_secrets.env and config
- Configure Notion database IDs for tennis prematch, players, bets, etc.
- Update ITF Notion pipeline to use correct database field names:
  * Pelaaja A nimi / Pelaaja B nimi (instead of Pelaaja 1/2)
  * Kenttä (instead of Alusta)
  * Match Status with correct values (Upcoming, Live, Completed)
- Add test scripts for Notion connection and pipeline
- Add database schema checker
- Pipeline successfully tested: 105/108 matches created (97% success rate)
- Add documentation: NOTION_SETUP_COMPLETE.md, PIPELINE_TEST_RESULTS.md

--- a/.gitignore
+++ b/.gitignore
@@ -42,6 +42,16 @@ telegram_secrets.env
 # Notion integration secrets
 config/notion_databases.json
 config/notion_token.txt
+config/notion_config.json
 *.notion_token
 NOTION_TOKEN
 .vercel
+
+# Config files with secrets (use environment variables instead)
+config/live_config.py
+config/screening_config.py
+config/soccer_screening_config.py
+
+# Log files
+*.log
+live_monitor.log
