--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,8 @@ numpy==1.26.2
 # Machine Learning (for ITF match predictor)
 scikit-learn==1.3.2
 joblib==1.3.2
+xgboost==2.0.3
+lightgbm==4.1.0
 
 # Configuration and Environment
 PyYAML==6.0.1
